2005-08-13  Carl Worth  <cworth@cworth.org>

	* NEWS: Added notes for release 0.9.2.
	
	* configure.in: Increment CAIRO_VERSION to 0.9.2 and libtool
	versioning to 3:1:1.

	* RELEASING: Remove some more 'snapshot' language. Make it more
	clear that the libtool versioning numbers need to be updated.

2005-08-13  Carl Worth  <cworth@cworth.org>

	* src/cairo-pattern.c: Fix unterminated comment that eliminated
	cairo_pattern_add_color_stop_rgba.

2005-08-13  Carl Worth  <cworth@cworth.org>

	* NEWS: Add missing notes on soname and user-space locking for
	cairo_set_source() to the 0.9.0 release notes.
	
	* src/cairo-pattern.c: Document cairo_pattern_add_color_stop_rgb,
	cairo_pattern_add_color_stop_rgba, cairo_pattern_set_matrix, and
	cairo_pattern_get_matrix.
	
	* src/cairo.c: Add note on user-space locking to the documentation
	for cairo_set_source().

2005-08-13  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h: Turn the mutex code back on. It looks like the
	deadlocks have disappeared as of the cairo_scaled_font_map patch
	from two days ago.
	
	* configure.in: Setup an automake conditional for the HAVE_PTHREAD
	case.
	
	* test/Makefile.am: Link all tests with -lpthread if available, so
	that we can get some testing of cairo with mutexes turned on.

2005-08-13  Carl Worth  <cworth@cworth.org>

	Minor, cosmetic changes:

	* src/cairo-ft-font.c: (_cairo_ft_unscaled_font_lock_face): Reowrd
	comment to be more clear.

	* src/cairo-ft-font.c: (_cairo_ft_scaled_font_create): Prefer
	return of address of base field rather than cast.

	* src/cairo-ft-font.c: (_cairo_ft_font_face_destroy): Whitespace
	fix.

2005-08-13  Carl Worth  <cworth@cworth.org>

	* src/cairo-ft-font.c: (_cairo_ft_unscaled_font_map_create),
	(_cairo_ft_unscaled_font_init_key), (_cairo_ft_unscaled_font_init),
	(_cairo_unscaled_font_is_ft), (_cairo_ft_unscaled_font_fini),
	(_cairo_ft_unscaled_font_keys_equal),
	(_cairo_ft_unscaled_font_create_from_face),